--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "react-masonry-css": "^1.0.16",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.27.0",
+    "react-webcam": "^7.2.0",
     "simplex-noise": "^4.0.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
